tests/sksl/errors/ReservedNameImage.glsl
### Compilation failed:

error: 1: name 'image1D' is reserved
int image1D;
    ^^^^^^^
error: 2: name 'image2D' is reserved
int image2D;
    ^^^^^^^
error: 3: name 'image3D' is reserved
int image3D;
    ^^^^^^^
error: 4: name 'image1DArray' is reserved
int image1DArray;
    ^^^^^^^^^^^^
error: 5: name 'image2DArray' is reserved
int image2DArray;
    ^^^^^^^^^^^^
error: 6: name 'image2DRect' is reserved
int image2DRect;
    ^^^^^^^^^^^
error: 7: name 'image2DMS' is reserved
int image2DMS;
    ^^^^^^^^^
error: 8: name 'image2DMSArray' is reserved
int image2DMSArray;
    ^^^^^^^^^^^^^^
error: 9: name 'imageBuffer' is reserved
int imageBuffer;
    ^^^^^^^^^^^
error: 10: name 'imageCube' is reserved
int imageCube;
    ^^^^^^^^^
error: 11: name 'imageCubeArray' is reserved
int imageCubeArray;
    ^^^^^^^^^^^^^^
error: 13: name 'iimage1D' is reserved
int iimage1D;
    ^^^^^^^^
error: 14: name 'iimage2D' is reserved
int iimage2D;
    ^^^^^^^^
error: 15: name 'iimage3D' is reserved
int iimage3D;
    ^^^^^^^^
error: 16: name 'iimage1DArray' is reserved
int iimage1DArray;
    ^^^^^^^^^^^^^
error: 17: name 'iimage2DArray' is reserved
int iimage2DArray;
    ^^^^^^^^^^^^^
error: 18: name 'iimage2DRect' is reserved
int iimage2DRect;
    ^^^^^^^^^^^^
error: 19: name 'iimage2DMS' is reserved
int iimage2DMS;
    ^^^^^^^^^^
error: 20: name 'iimage2DMSArray' is reserved
int iimage2DMSArray;
    ^^^^^^^^^^^^^^^
error: 21: name 'iimageBuffer' is reserved
int iimageBuffer;
    ^^^^^^^^^^^^
error: 22: name 'iimageCube' is reserved
int iimageCube;
    ^^^^^^^^^^
error: 23: name 'iimageCubeArray' is reserved
int iimageCubeArray;
    ^^^^^^^^^^^^^^^
error: 25: name 'uimage1D' is reserved
int uimage1D;
    ^^^^^^^^
error: 26: name 'uimage2D' is reserved
int uimage2D;
    ^^^^^^^^
error: 27: name 'uimage3D' is reserved
int uimage3D;
    ^^^^^^^^
error: 28: name 'uimage1DArray' is reserved
int uimage1DArray;
    ^^^^^^^^^^^^^
error: 29: name 'uimage2DArray' is reserved
int uimage2DArray;
    ^^^^^^^^^^^^^
error: 30: name 'uimage2DRect' is reserved
int uimage2DRect;
    ^^^^^^^^^^^^
error: 31: name 'uimage2DMS' is reserved
int uimage2DMS;
    ^^^^^^^^^^
error: 32: name 'uimage2DMSArray' is reserved
int uimage2DMSArray;
    ^^^^^^^^^^^^^^^
error: 33: name 'uimageBuffer' is reserved
int uimageBuffer;
    ^^^^^^^^^^^^
error: 34: name 'uimageCube' is reserved
int uimageCube;
    ^^^^^^^^^^
error: 35: name 'uimageCubeArray' is reserved
int uimageCubeArray;
    ^^^^^^^^^^^^^^^
33 errors
